Cleaned up height bugs, margin errors on mobile

--- a/src/styles/Search.css
+++ b/src/styles/Search.css
@@ -9,8 +9,8 @@
 }
 
 .ReactTags__tags {
-  margin-left: 50px;
-  margin-right: 50px;
+  margin-left: 25px;
+  margin-right: 25px;
   margin-top: 25px;
 }
 
@@ -26,7 +26,7 @@
 
 .ReactTags__tagInput {
   display: grid;
-  /* min-width: 35%; */
+  /* max-width: 50%; */
 }
 .ReactTags__tagInputField {
   margin-top: 10px;
@@ -68,7 +68,6 @@ div.ReactTags__suggestions ul {
   margin-right: 1px;
   box-shadow: 0.05em 0.01em 0.5em rgba(0, 0, 0, 0.2);
   background: white;
-  /* width: 200px; */
 }
 div.ReactTags__suggestions li {
   border-bottom: 1px solid #ddd;
